fix users role